# mini-kb-mcp

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  docker-compose.yaml  docker-compose.yml  fastmcp.json  pyproject.toml
.github/workflows/: ci.yml
src/mini_docs_mcp/: __init__.py  server.py
src/mini_docs_mcp/db/: __init__.py  sqlite.py  vector.py
src/mini_docs_mcp/parser/: __init__.py  markdown.py
src/mini_docs_mcp/resources/: __init__.py  vault.py
src/mini_docs_mcp/tools/: __init__.py  link.py  read.py  search.py  write.py
src/mini_docs_mcp/watcher/: __init__.py  sync.py
tests/: __init__.py  test_hardcore.py  test_integration.py  test_parser.py  test_sqlite.py
vault/: index.md  sample-concept.md  sample-idea.md
